--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
 <meta name=keywords content>
 <meta name=description content="L'observatoire est un espace d'analyse politique de haut niveau précédant la création d'un think tank résolument disruptif">
 <meta name=author content>
-<link rel=canonical href=https://faultseq.github.io/test/404.html>
-<link crossorigin=anonymous href=/test/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://faultseq.github.io/test/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://faultseq.github.io/test/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://faultseq.github.io/test/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://faultseq.github.io/test/apple-touch-icon.png>
-<link rel=mask-icon href=https://faultseq.github.io/test/safari-pinned-tab.svg>
+<link rel=canonical href=https://faultseq.github.io/404.html>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://faultseq.github.io/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://faultseq.github.io/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://faultseq.github.io/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://faultseq.github.io/apple-touch-icon.png>
+<link rel=mask-icon href=https://faultseq.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
@@ -23,7 +23,7 @@
 </noscript><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="L'observatoire est un espace d'analyse politique de haut niveau précédant la création d'un think tank résolument disruptif">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://faultseq.github.io/test/404.html">
+<meta property="og:url" content="https://faultseq.github.io/404.html">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="L'observatoire est un espace d'analyse politique de haut niveau précédant la création d'un think tank résolument disruptif">
@@ -33,7 +33,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://faultseq.github.io/test accesskey=h title="Observatoire de la Fachosphère (Alt + H)">Observatoire de la Fachosphère</a>
+<a href=https://faultseq.github.io/ accesskey=h title="Observatoire de la Fachosphère (Alt + H)">Observatoire de la Fachosphère</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -41,22 +41,22 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://faultseq.github.io/test/introduction/ title=intro>
+<a href=https://faultseq.github.io/introduction/ title=intro>
 <span>intro</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/categories/ title=categories>
+<a href=https://faultseq.github.io/categories/ title=categories>
 <span>categories</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/tags/ title=tags>
+<a href=https://faultseq.github.io/tags/ title=tags>
 <span>tags</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/search/ title="rechercher (Alt + /)" accesskey=/>
+<a href=https://faultseq.github.io/search/ title="rechercher (Alt + /)" accesskey=/>
 <span>rechercher</span>
 </a>
 </li>
@@ -67,7 +67,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://faultseq.github.io/test>Observatoire de la Fachosphère</a></span>
+<span>&copy; 2021 <a href=https://faultseq.github.io/>Observatoire de la Fachosphère</a></span>
 <span>
 | Powered by l'intelligence et la sagacité cyclopéenne de son auteur
 </span>
