--- a/billets/index.html
+++ b/billets/index.html
@@ -7,35 +7,35 @@
 <meta name=keywords content>
 <meta name=description content="Billets - Observatoire de la Fachosphère">
 <meta name=author content>
-<link rel=canonical href=https://faultseq.github.io/test/billets/>
-<link crossorigin=anonymous href=/test/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://faultseq.github.io/test/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://faultseq.github.io/test/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://faultseq.github.io/test/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://faultseq.github.io/test/apple-touch-icon.png>
-<link rel=mask-icon href=https://faultseq.github.io/test/safari-pinned-tab.svg>
+<link rel=canonical href=https://faultseq.github.io/billets/>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://faultseq.github.io/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://faultseq.github.io/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://faultseq.github.io/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://faultseq.github.io/apple-touch-icon.png>
+<link rel=mask-icon href=https://faultseq.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://faultseq.github.io/test/billets/index.xml>
+<link rel=alternate type=application/rss+xml href=https://faultseq.github.io/billets/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
 </noscript><meta property="og:title" content="Billets">
 <meta property="og:description" content="L'observatoire est un espace d'analyse politique de haut niveau précédant la création d'un think tank résolument disruptif">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://faultseq.github.io/test/billets/">
+<meta property="og:url" content="https://faultseq.github.io/billets/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Billets">
 <meta name=twitter:description content="L'observatoire est un espace d'analyse politique de haut niveau précédant la création d'un think tank résolument disruptif">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":2,"name":"Billets","item":"https://faultseq.github.io/test/billets/"}]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Billets","item":"https://faultseq.github.io/billets/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://faultseq.github.io/test accesskey=h title="Observatoire de la Fachosphère (Alt + H)">Observatoire de la Fachosphère</a>
+<a href=https://faultseq.github.io/ accesskey=h title="Observatoire de la Fachosphère (Alt + H)">Observatoire de la Fachosphère</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -43,22 +43,22 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://faultseq.github.io/test/introduction/ title=intro>
+<a href=https://faultseq.github.io/introduction/ title=intro>
 <span>intro</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/categories/ title=categories>
+<a href=https://faultseq.github.io/categories/ title=categories>
 <span>categories</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/tags/ title=tags>
+<a href=https://faultseq.github.io/tags/ title=tags>
 <span>tags</span>
 </a>
 </li>
 <li>
-<a href=https://faultseq.github.io/test/search/ title="rechercher (Alt + /)" accesskey=/>
+<a href=https://faultseq.github.io/search/ title="rechercher (Alt + /)" accesskey=/>
 <span>rechercher</span>
 </a>
 </li>
@@ -66,11 +66,11 @@
 </nav>
 </header>
 <main class=main>
-<header class=page-header><div class=breadcrumbs><a href=https://faultseq.github.io/test>Accueil</a></div>
+<header class=page-header><div class=breadcrumbs><a href=https://faultseq.github.io/>Accueil</a></div>
 <h1>Billets</h1>
 </header>
 <article class=post-entry>
-<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/test/img/vlcsnap-2021-10-08-07h54m06s193.png alt>
+<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/img/vlcsnap-2021-10-08-07h54m06s193.png alt>
 </figure>
 <header class=entry-header>
 <h2>L'Heure des Pros 1&2 | 07/10/2021
@@ -81,7 +81,7 @@
 Et ce n’est que le début de cette émission exceptionnelle, Pascal Praud enchaîne après en nous rappelant que c’est important d’être honnête intellectuellement (?...</p>
 </section>
 <footer class=entry-footer>vendredi 8 octobre 2021</footer>
-<a class=entry-link aria-label="post link to L'Heure des Pros 1&2 | 07/10/2021" href=https://faultseq.github.io/test/billets/heure-des-pros-07-10-2021/></a>
+<a class=entry-link aria-label="post link to L'Heure des Pros 1&2 | 07/10/2021" href=https://faultseq.github.io/billets/heure-des-pros-07-10-2021/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -95,10 +95,10 @@ Et tout ceci n’est pas sans raison, il suffit de le vérifier soi même, chacu
 </p>
 </section>
 <footer class=entry-footer>jeudi 7 octobre 2021</footer>
-<a class=entry-link aria-label="post link to Heure des Pros 2 | 05/10/2021" href=https://faultseq.github.io/test/billets/heure-des-pros-2-05-10-2021/></a>
+<a class=entry-link aria-label="post link to Heure des Pros 2 | 05/10/2021" href=https://faultseq.github.io/billets/heure-des-pros-2-05-10-2021/></a>
 </article>
 <article class=post-entry>
-<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/test/img/unknown.png alt>
+<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/img/unknown.png alt>
 </figure>
 <header class=entry-header>
 <h2>Soir Info | 06/10/2021
@@ -109,10 +109,10 @@ Et tout ceci n’est pas sans raison, il suffit de le vérifier soi même, chacu
 </p>
 </section>
 <footer class=entry-footer>mercredi 6 octobre 2021</footer>
-<a class=entry-link aria-label="post link to Soir Info | 06/10/2021" href=https://faultseq.github.io/test/billets/soir-info-06-10-2021/></a>
+<a class=entry-link aria-label="post link to Soir Info | 06/10/2021" href=https://faultseq.github.io/billets/soir-info-06-10-2021/></a>
 </article>
 <article class=post-entry>
-<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/test/img/Screenshot%202021-10-06%20225653.png alt>
+<figure class=entry-cover><img loading=lazy src=https://faultseq.github.io/img/Screenshot%202021-10-06%20225653.png alt>
 </figure>
 <header class=entry-header>
 <h2>L'Heure des Pros | 05/10/2021
@@ -125,11 +125,11 @@ J'en apprend tous les jours 😵
 en France >> les divorces religieux où l'imam décide de la séparation des biens en faveur de l'homme 😂...</p>
 </section>
 <footer class=entry-footer>mercredi 6 octobre 2021</footer>
-<a class=entry-link aria-label="post link to L'Heure des Pros | 05/10/2021" href=https://faultseq.github.io/test/billets/heure-des-pros-05-10-2021/></a>
+<a class=entry-link aria-label="post link to L'Heure des Pros | 05/10/2021" href=https://faultseq.github.io/billets/heure-des-pros-05-10-2021/></a>
 </article>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://faultseq.github.io/test>Observatoire de la Fachosphère</a></span>
+<span>&copy; 2021 <a href=https://faultseq.github.io/>Observatoire de la Fachosphère</a></span>
 <span>
 | Powered by l'intelligence et la sagacité cyclopéenne de son auteur
 </span>
