deploy: b7cf30d829b6e0fedd7332957fdb6b139096ad55

--- a/billets/heure-des-pros-07-10-2021/index.html
+++ b/billets/heure-des-pros-07-10-2021/index.html
@@ -90,35 +90,35 @@ Une bien belle émission du matin, décevante le soir
 <h2 id=libéralisme-et-droite-forte>Libéralisme et droite&mldr; forte<a hidden class=anchor aria-hidden=true href=#libéralisme-et-droite-forte>#</a></h2>
 <p>Notre ami ex président de l&rsquo;OM, club favori de la partie éclairée de la France par le biais de notre très cher président Emmanuel Macron, aime nous faire hurler et il sait bien le faire. Pour lui, les deux plus grands présidents (sic) de ces dernières années au niveau mondial sont Thatcher et Reagan. Oui.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/BravoLesLiberaux.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/BravoLesLiberaux.mp4 type=video/mp4>
 </video>
 <p>Et ce n&rsquo;est que le début de cette émission exceptionnelle, Pascal Praud enchaîne après en nous rappelant que c&rsquo;est important d&rsquo;être honnête intellectuellement (?), et fait immédiatement preuve de cette honnêteté, il se retrouve ainsi dans la position délicate de dénoncer les propos SÉPARATISTES d&rsquo;un prêtre catholique haut placé, par le simple fait que si ça avait été un Imam il l&rsquo;aurait fait&mldr; sans sourciller comme nous pouvons l&rsquo;imaginer. Magnéto :</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/NousVisonsLesMusulmans.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/NousVisonsLesMusulmans.mp4 type=video/mp4>
 </video>
 <p>Puis l&rsquo;inénarrable Robert Ménard se sent comme à la maison sur Cnews, ce qui n&rsquo;a pas l&rsquo;air de ravir Pascal Praud</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/CnewsEstSympa.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/CnewsEstSympa.mp4 type=video/mp4>
 </video>
 <p>Mais le chef de l&rsquo;Heure des Pros ne se laisse pas abattre, il s&rsquo;attaque immédiatement à madame Veil, directrice de Radio France depuis 2018 sous le motif de l&rsquo;argent public mal utilisé, il est en effet indispensable d&rsquo;inviter monsieur Ménard sur France Inter. Ce dernier était sur France Info mais ce n&rsquo;est pas suffisant, le maire de la mégalopole internationale de Béziers, DVD, a des choses a dire et il faut que ce soit sur France Inter.
 Cnews étant un média privé, la pluralité des invités n&rsquo;est pas nécessaire, contrairement à ce que veut nous faire croire le CSA qui a régulièrement mis en demeure la chaîne pour surexposition de l&rsquo;extrême droite !</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/MenardTousLesMoisSurCnewsDoitAllerSurFranceInter.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/MenardTousLesMoisSurCnewsDoitAllerSurFranceInter.mp4 type=video/mp4>
 </video>
 <p>Et arrive l&rsquo;illumination métaphysique de la matinée, Eric Zemmour n&rsquo;est pas d&rsquo;extrême droite. Enfin quelqu&rsquo;un ose le dire, merci monsieur Praud.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/ZemmourNEstPasDExtremeDroite.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/ZemmourNEstPasDExtremeDroite.mp4 type=video/mp4>
 </video>
 <h1 id=heure-des-pros-du-soir>Heure des Pros du soir<a hidden class=anchor aria-hidden=true href=#heure-des-pros-du-soir>#</a></h1>
 <p>Émission moyenne cette fois ci, on se perd comme d&rsquo;habitude entre redites et endormissement spontanné, rien a voir a priori avec la moyenne d&rsquo;âge sur le plateau, nous avons quand même eu un beau lapsus de monsieur Goldnadel : sur le fond (de l&rsquo;affaire de la circulaire Blanquer concernant les enfants transgenre à l&rsquo;école) Zemmour a tort.
 C&rsquo;est un séisme politique.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/GoldnadelLapsus.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/GoldnadelLapsus.mp4 type=video/mp4>
 </video>
 <h1 id=bonus>Bonus<a hidden class=anchor aria-hidden=true href=#bonus>#</a></h1>
 <p>Cnews c&rsquo;est avant tout la culture, Marie-Estelle Dupont invoque la philosophe libertarienne Ayn Rand pour nous rappeler que A est différent de nonA. Adaptez vous et mettez vous au diapason que diable.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/AynRand.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/AynRand.mp4 type=video/mp4>
 </video>
 </div>
 <footer class=post-footer>
