--- a/billets/heure-des-pros-2-05-10-2021/index.html
+++ b/billets/heure-des-pros-2-05-10-2021/index.html
@@ -83,15 +83,15 @@ Mais enfin, ce n'est pas ça le sujet de la campagne
 </header>
 <div class=post-content><p>C&rsquo;est beau, merci pour tout.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/LEvasionFiscaleCeNEstPasLeSujet.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/LEvasionFiscaleCeNEstPasLeSujet.mp4 type=video/mp4>
 </video>
 <p>Les français ne reconnaissent plus le pays dans lequel ils ont vécu, et c&rsquo;est très grave&mldr;</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/JeConnaisLesFrancais.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/JeConnaisLesFrancais.mp4 type=video/mp4>
 </video>
 <p>Et tout ceci n&rsquo;est pas sans raison, il suffit de le vérifier soi même, chacun constatera que les blancs (sic) sont exclus de certaines activités.</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/BlancsExclus.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/BlancsExclus.mp4 type=video/mp4>
 </video>
 </div>
 <footer class=post-footer>
