--- a/billets/soir-info-06-10-2021/index.html
+++ b/billets/soir-info-06-10-2021/index.html
@@ -89,7 +89,7 @@ mmmhhhh ?
 <div class=post-content><h1 id=je-vous-laisse-juge>Je vous laisse juge<a hidden class=anchor aria-hidden=true href=#je-vous-laisse-juge>#</a></h1>
 <p>Il faut savoir que cette jeune femme est une fachotte travaillant chez CAUSEUR</p>
 <video width=100% controls>
-<source src=https://faultseq.github.io//videos/KenOuPas.mp4 type=video/mp4>
+<source src=https://faultseq.github.io/videos/KenOuPas.mp4 type=video/mp4>
 </video>
 </div>
 <footer class=post-footer>
