deploy: 1654e5bca20f2a9b19bbbf353968afafd51bc220

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -91,8 +91,8 @@ Oui monsieur, une introduction, je suis agrégé de philosophie
 <p>Il faut laisser les français tranquilles !</p>
 <p>Pour conclure, il faut sacraliser la propriété privée mais <em>de minimis</em> comme disait mon professeur de latin (agrégé lui aussi), alors je remercie DAVA pour cet extrait qui fait chaud au coeur et révèle le VRAI sentiment des VRAIS français :</p>
 <audio controls>
-<source src=https://faultseq.github.io/testaudios/dava-asmr.ogg type=audio/ogg>
-<source src=https://faultseq.github.io/testaudios/dava-asmr.mp3 type=audio/mpeg>
+<source src=https://faultseq.github.io/test/audios/dava-asmr.ogg type=audio/ogg>
+<source src=https://faultseq.github.io/test/audios/dava-asmr.mp3 type=audio/mpeg>
 </audio>
 </div>
 <footer class=post-footer>
